# ChangeLog for app-cdr/cdrkit
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-cdr/cdrkit/ChangeLog,v 1.67 2009/02/15 13:51:20 ranger Exp $

  15 Feb 2009; Brent Baude <ranger@gentoo.org> cdrkit-1.1.9.ebuild:
  stable ppc, bug 256106

  14 Feb 2009; Raúl Porcel <armin76@gentoo.org> cdrkit-1.1.9.ebuild:
  ia64/s390/sparc stable wrt #256106

  06 Feb 2009; Jeroen Roovers <jer@gentoo.org> cdrkit-1.1.9.ebuild:
  Stable for HPPA (bug #256106).

  26 Jan 2009; Brent Baude <ranger@gentoo.org> cdrkit-1.1.9.ebuild:
  stable ppc64, bug 256106

  25 Jan 2009; Markus Meier <maekke@gentoo.org> cdrkit-1.1.9.ebuild:
  amd64/x86 stable, bug #256106

*cdrkit-1.1.9 (02 Nov 2008)

  02 Nov 2008; Peter Alfredsen <loki_val@gentoo.org> +cdrkit-1.1.9.ebuild:
  Bump.

  24 Jul 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

  21 Jul 2008; Jeroen Roovers <jer@gentoo.org> cdrkit-1.1.8.ebuild:
  Stable for HPPA (bug #230956).

  13 Jul 2008; Joseph Jezak <josejx@gentoo.org> cdrkit-1.1.8.ebuild:
  Marked ppc stable for bug #230956.

  10 Jul 2008; Brent Baude <ranger@gentoo.org> cdrkit-1.1.8.ebuild:
  stable ppc64, bug 230956

  10 Jul 2008; Raúl Porcel <armin76@gentoo.org> cdrkit-1.1.8.ebuild:
  ia64/sparc/x86 stable wrt #230956

  07 Jul 2008; Santiago M. Mola <coldwind@gentoo.org> cdrkit-1.1.8.ebuild:
  amd64 stable wrt bug #230956

*cdrkit-1.1.8 (04 Jun 2008)

  04 Jun 2008; Steve Dibb <beandog@gentoo.org> +cdrkit-1.1.8.ebuild:
  Version bump, bug 224337

*cdrkit-1.1.7.1 (18 Apr 2008)

  18 Apr 2008; Steve Dibb <beandog@gentoo.org> +cdrkit-1.1.7.1.ebuild:
  Version bump, bug 215409

  07 Nov 2007; Raúl Porcel <armin76@gentoo.org> cdrkit-1.1.6.ebuild:
  Add ~alpha, thanks to Tobias Klausmann for testing

  04 Nov 2007; Lars Weiler <pylon@gentoo.org>
  -files/cdrkit-readom-clone.patch, -cdrkit-1.1.2.ebuild,
  -cdrkit-1.1.4.ebuild, -cdrkit-1.1.5.1.ebuild: