@@ -3,6 +3,7 @@ AUX cdrkit-1.1.8-interix3.patch 1608 RMD160 d0283b5e5e9eeb354db062992e46f54ba392
 DIST cdrkit-1.1.8.tar.gz 1429928 RMD160 0d4a8ca907f2ea0f6daa49adfc2fca41d7222af6 SHA1 0ac0fd15b3cdd77c7cf2b019c88aee5b1d840dbb SHA256 9d80d0a52abb3a6f44467f47e59a0eec09720c66c6a79c4d960916c67542f237
 DIST cdrkit-1.1.9.tar.gz 1430065 RMD160 ce3c62b98c82f3d524a345a6360d24e1d7ac73d7 SHA1 44c9d85c300803e6b9a415e79f3f0c9ddf1a65ee SHA256 d5d58ab4c7bef036a53ef9742b4e57621f61310cd0cd28f558ba0b88c354efa2
 EBUILD cdrkit-1.1.8.ebuild 2355 RMD160 8e00a2328cfb36828b7366e4e54716d970986737 SHA1 2935153946035d58b491b56d652c9b624d619812 SHA256 eecd90f789563626d8e3e5c9d17df83f45619114bdd338c87aaf40d7fe3a8faf
+EBUILD cdrkit-1.1.9-r1.ebuild 1925 RMD160 d7b287b2dd6e0856036590fde6bd91111ea89b23 SHA1 69d8dc35122a59adbdc6b701b72904738bfcba70 SHA256 87849004efcb15177597ef888e546e244e893b21e27b47d87dc37b9a00f87fb8
 EBUILD cdrkit-1.1.9.ebuild 2225 RMD160 4fe5f922e08409dd22abe6ac78acfbb8201193e9 SHA1 5948c6415ad96790243f2afb8d2949f90fb516ec SHA256 83ff89894a307278b0155e1b58278ab7ea52e0dc2442adb308287776ff37c74a
-MISC ChangeLog 7872 RMD160 0ed1a0702fa9d9a130a620644be0ff6230a07063 SHA1 1d104b684f738a7a69977cb171e2979b35433787 SHA256 d9bd05ecf28decb70c2f0f6cef05e254b65477f6dc04e776f7d8f7f36587fd8f
+MISC ChangeLog 8099 RMD160 e0def3105e996d4f0cdbf3a4fb8e4ac92f56edb1 SHA1 bbeca3ddfe9527d0c828e0d142a8cc0bc841fb9f SHA256 b7cc3fe3b55863c17730a96b21362fdfd3c83b4f1e9a618dd4f9948bb0389d05
 MISC metadata.xml 247 RMD160 f3cc383d1015158a8bfe1b6efd3586fa89a95345 SHA1 47a345bfa35d34381b88e9a8770cbe35a24c1476 SHA256 4d18b2a7e3f3237d29a2ea874c71c66abcda946f15bb7e15fa7cfc1d33731a24
